--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<title>RhymeGrid - Master Rhyme Patterns</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -14,7 +13,6 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>RhymeGrid</h1>
 						<h2>Master Rhyme Patterns</h2>
 							<h3>Advanced Training with the Ultimate Rhyme Generator</h3>
@@ -30,10 +28,10 @@
 							<div style="width:400px">
 							    <form action="https://rhymegrid.us21.list-manage.com/subscribe/post?u=5a57a868eb26d3aa2148e976f&amp;id=830a9c5ab1&amp;f_id=00de5ae1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_self">
 							        <div>
-							        <h2 class="email-input">Get Early Access:</h2>
-								<input class="email-input" type="email" value="" placeholder="yourname@company.com" name="EMAIL" class="required email" id="mce-EMAIL" required>
+							        <h2 class="email-input"><strong>Get Early Access:</strong></h2>
+								<input class="email-input required email" type="email" value="" placeholder="yourname@company.com" name="EMAIL" id="mce-EMAIL" required>
 								<span id="mce-EMAIL-HELPERTEXT" class="helper_text" style="display:none"></span>
-							</div>
+									</div>
 								<div id="mce-responses" >
 									<div class="response" id="mce-error-response" style="display:none"></div>
 									<div class="response" id="mce-success-response" style="display:none"></div>
@@ -44,7 +42,6 @@
 							                <input type="submit" value="Try it now" name="subscribe" id="mc-embedded-subscribe" class="button">
 							            </div>
 							        </div>
-							    </div>
 							</form>
 							</div>
 						</div>
@@ -78,6 +75,8 @@
 									<div class="row gtr-uniform">
 										<div class="col-6"><span class="image fit"><img src="assets/1.png" alt="" /></span></div>
 										<div class="col-6"><span class="image fit"><img src="assets/2.png" alt="" /></span></div>
+									</div>
+								</div>
 								
 							</section>
 
@@ -141,9 +140,6 @@ Gone are the days of <em>tedious</em> and <em>monotonous</em> rhyming <em>exerci
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
