--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1>RhymeGrid</h1>
-						<h2>Master Rhyme Patterns</h2>
+						<h1>Calling All Rhymers!</h1>
+						<h2>RhymeGrid - Master Rhyme Patterns</h2>
 							<h3>Advanced Training with the Ultimate Rhyme Generator</h3>
 						<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
 						  <iframe width="320" height="560" src="https://www.youtube.com/embed/i_VoBgQ7YmE" title="Master Rhyme Patterns: Advanced Training with the Ultimate Rhyme Generator #shorts" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
